# tfc-erp

./: .gitignore  AUDIT_SUMMARY.md  AUTH_IMPLEMENTATION.md  AUTH_TESTING_GUIDE.md  DATABASE_ARCHITECTURE.md  DATABASE_AUDIT_RESULTS.md  IMPLEMENTATION_GUIDE.md  INVOICE_GUIDE.md  PERFORMANCE_AUDIT.md  README.md  drizzle.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
my parties reference code/: index.html
my parties reference code/src/: App.tsx  index.css
my settings refrence code files/: README_SETTINGS.md  index.html  package-lock.json  package.json
my settings refrence code files/src/: App.tsx  index.css
src/: App.tsx  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: main.toml
src-tauri/src/: auth.rs  backup.rs  db.rs  main.rs
src/components/: AppLayout.tsx  BackupRestorePanel.tsx  CommandPalette.tsx  CompanyForm.tsx  CompanySwitcher.tsx  CreatePartyModal.tsx  DashboardHero.tsx  Header.tsx  InvoiceViewer.tsx  PageTransition.tsx  PartyCard.tsx  PartyDetailDrawer.tsx  PartySelect.tsx  PendingTasksWidgets.tsx  PremiumForm.tsx  PremiumLayout.tsx  PremiumTable.tsx  ProtectedCompanyRoute.tsx  ProtectedRoute.tsx  PurchaseViewer.tsx  QuickActions.tsx  RecentActivitySection.tsx  SelectCompanyState.tsx  Sidebar.tsx  SkeletonLoaders.tsx  StatCard.tsx  SupplierSelect.tsx  Toast.tsx  VirtualList.tsx  index.ts
src/data/: mockData.ts
src/db/: db.ts  drizzle-schema.ts  schema.ts  service.ts
src/hooks/: useAuth.ts  useDebounce.ts  useFocusTrap.ts  useFormKeyboardNavigation.ts  useGlobalKeyboardManager.ts  usePageData.ts  useResponsive.ts  useSpreadsheetNavigation.ts
src/i18n/: config.ts
src/keyboard/: shortcutManager.ts
src/locales/: en.json  gu.json
src/pages/: Billing.tsx  CreateCompany.tsx  Dashboard.tsx  EditCompany.tsx  Inventory.tsx  Ledger.tsx  Login.tsx  ManageCompanies.tsx  NoCompanyAssigned.tsx  Parties.tsx  PartyDetails.tsx  Payments.tsx  PrintPreview.tsx  PurchasePage.tsx  Purchases.tsx  Reports.tsx  SalesAndPurchase.tsx  Search.tsx  SelectCompany.tsx  Settings-Old.tsx  Settings.tsx  Suppliers.tsx  TabletView.tsx  Transactions.tsx  VehicleArrivalRegister.tsx
src/router/: routes.tsx
src/services/: auth.ts  (+1 more)
(+131 files in other folders)
