[package]
name = "fruit_market_erp"
version = "0.1.0"
description = "Fruit Market Commission ERP"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.11.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.1", features = [] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
