[package]
name = "fruit_market_erp"
version = "0.1.0"
description = "Fruit Market Commission ERP"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.6.1", features = [] }
zip = { version = "2", default-features = false, features = ["deflate"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
